[package]
name = "ison-graph"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["Mahesh Vaikri"]
description = "ISONGraph - Token-efficient property graph store with ISON persistence for Rust"
license = "MIT"
repository = "https://github.com/isongraph/isongraph"
homepage = "https://www.ison.dev"
documentation = "https://docs.rs/ison-graph"
readme = "README.md"
keywords = ["ison", "graph", "property-graph", "multi-hop", "traversal"]
categories = ["data-structures", "database", "parser-implementations"]

[dependencies]
ison-rs = "1.0.1"
thiserror = "2.0"
regex = "1.12"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde"]

[dev-dependencies]
pretty_assertions = "1.4"
serde_json = "1.0"
